--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -640,6 +640,7 @@ server {
         rewrite ^/Inktober/(?<original>.*)$ https://old.reddit.com/r/Inktober/$original permanent;
         rewrite ^/Illustration/(?<original>.*)$ https://old.reddit.com/r/Illustration/$original permanent;
         rewrite ^/logodesign/(?<original>.*)$ https://old.reddit.com/r/logodesign/$original permanent;
+        rewrite ^/AskReddit/(?<original>.*)$ https://old.reddit.com/r/AskReddit/$original permanent;
 
         rewrite ^/(?<original>.*/dp/B.*)$ https://amazon.com/$original permanent; # eg. '/Miracle-Philadelphia-Constitutional-Convention-September/dp/B0007ELQH0'
         rewrite ^/(?<original>doc/www/.*)\.pdf%23(?<anchor>[a-z0-9=]+)$ /$original.pdf\#$anchor permanent;
