--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8720,7 +8720,7 @@
 "~^/emergenesis.*$" "/note/Emergenesis";
 "~^/end$" "/note/End-to-end";
 "~^/ethicist.*$" "/note/Ethicists";
-"~^/Fashion.*$" "/note/Fashion";
+"~^/Fashion.*$" "/note/fashion";
 "~^/faster$" "/note/Faster";
 "~^/fc$" "/note/FC";
 "~^/fermi.*$" "/note/Fermi";
@@ -19427,6 +19427,146 @@
 "~^/diverse-bench.*$" "/creative-benchmark";
 "~^/diversity-bench.*$" "/creative-benchmark";
 "~^/lorem-april$" "/lorem-april-fools";
+"~^/doc/technology/2024-12-30-texasvsnrc-624cv00507-complaint$" "/doc/technology/2024-12-30-texasvsnrc-624cv00507-complaint.pdf";
+"~^/doc/technology/1958-bain.pdft.*$" "/doc/technology/1958-bain.pdf";
+"~^/bitcoin-is-worse-is...3$" "/bitcoin-is-worse-is-better";
+"~^/u003EWhat-but-design-of-darkness-to-appall$" "https://poets.org/poem/design";
+"~^/static/font/blackletter/index$" "https://github.com/gwern/gwern.net/tree/master/font/blackletter";
+"~^/stack.cabal$" "https://github.com/gwern/gwern.net/";
+"~^/silk-road.html$" "/silk-road";
+"~^/%F0%96%BE%91$" "/404";
+"~^/%F0%96%BE%85$" "/404";
+"~^/%F0%96%BE%82$" "/404";
+"~^/%F0%96%BD%AF$" "/404";
+"~^/%F0%96%BD%94$" "/404";
+"~^/%F0%96%BD%91$" "/404";
+"~^/%F0%96%BD%80$" "/404";
+"~^/%F0%96%BC%B7$" "/404";
+"~^/%F0%96%BC%A4$" "/404";
+"~^/%F0%96%BC%9E$" "/404";
+"~^/%E6%AD%A3%E9%AB%94%E5%AD%97$" "/404";
+"~^/%E2%98%BEoe%E2%9C%A1%EF%B8%8Eis%E2%9C%9D$" "/404";
+"~^/doc/statistics/bayes/hope-function/1994-falK$" "/doc/statistics/bayes/hope-function/1994-falk";
+"~^/doc/sr/gx-940$" "/doc/darknet-market/silk-road/1/gx-940-sr1salesdata-060211-02102013.csv";
+"~^/doc/sgh.*$" "/doc/index";
+"~^/doc/rotten.com/library/history/images-without-.*$" "/doc/rotten.com/library/history/iiiindex";
+"~^/doc/psychology/music/distraction/1972fox\.pdf.*$" "/doc/psychology/music/distraction/1972-fox.pdf";
+"~^/doc/psychology/1981-latham$" "/doc/psychology/1981-latham-increasingproductivitythroughperformanceevaluations.pdf";
+"~^/doc/nootropics-piracetam-natural-data.png$" "/doc/nootropic/gwern-piracetam-natural-data.png";
+"~^/doc/nootropic/%C3%82%C2%BF.*$" "/doc/nootropic/index";
+"~^/doc/iq/1971-cattell-abilitiestheirstructuregrowthaction.pdf\(.*$" "/doc/iq/1971-cattell-abilitiestheirstructuregrowthaction.pdf";
+"~^/doc/darknet-market/xEVwX.*$" "/doc/darknet-market/index";
+"~^/doc/culture/2018-micola$" "/doc/culture/2018-micola.pdf";
+"~^/AskReddit/comments/219w2o/whos_the_dumbest_person_youve_ever_met/cifa2xl/$" "https://reddit.com/AskReddit/comments/219w2o/whos_the_dumbest_person_youve_ever_met/cifa2xl/";
+"~^/AskReddit/comments/219w2o/whos_the_dumbest_person_youve_ever_met/cgc2hy4/$" "https://reddit.com/AskReddit/comments/219w2o/whos_the_dumbest_person_youve_ever_met/cifa2xl/";
+"~^/\.fo$" "/404";
+"~^/bitcoin-is-worse-is$" "/bitcoin-is-worse-is-better";
+"~^/bitcoin-is-worse-is-better3$" "/bitcoin-is-worse-is-better";
+"~^/\.gw$" "/404";
+"~^/complem$" "/complement";
+"~^/doc/ai/gp.*$" "/doc/ai/index";
+"~^/doc/biology/2000-iapac-norvir/tolerability/abt_byrn.html$" "/doc/biology/2000-iapac-norvir/abt_byrn.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff.html$" "/doc/biology/2000-iapac-norvir/abt_dintruff.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/abt_lichter.html$" "/doc/biology/2000-iapac-norvir/abt_lichter.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/doc/tolerability/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/doc/tolerability/ask.html$" "/doc/biology/2000-iapac-norvir/ask.html";
+"~^/doc/tolerability/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/doc/tolerability/consequences.html$" "/doc/biology/2000-iapac-norvir/consequences.html";
+"~^/doc/tolerability/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/tolerability/faq.html$" "/doc/biology/2000-iapac-norvir/faq.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/farthing_sun.html$" "/doc/biology/2000-iapac-norvir/farthing_sun.html";
+"~^/doc/tolerability/help.html$" "/doc/biology/2000-iapac-norvir/help.html";
+"~^/doc/tolerability/list.html$" "/doc/biology/2000-iapac-norvir/list.html";
+"~^/doc/tolerability/otherreg.html$" "/doc/biology/2000-iapac-norvir/otherreg.html";
+"~^/doc/tolerability/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/regimens/fortalg.html$" "/doc/biology/2000-iapac-norvir/regimens/fortalg.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/regimens/stadtlanders.html$" "/doc/biology/2000-iapac-norvir/regimens/stadtlanders.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/regimens/tebas.html$" "/doc/biology/2000-iapac-norvir/regimens/tebas.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/shoofs.html$" "/doc/biology/2000-iapac-norvir/shoofs.html";
+"~^/doc/tolerability/temperature.html$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/temperature/abt_lichter_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_lichter_temp1.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/temperature/abt_sum_temp1.html$" "/doc/biology/2000-iapac-norvir/temperature/abt_sum_temp1.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/temperature/farthingtemp.html$" "/doc/biology/2000-iapac-norvir/temperature/farthingtemp.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/temperature/sun.html$" "/doc/biology/2000-iapac-norvir/temperature/sun.html";
+"~^/doc/tolerability/index$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/tolerability/tolerability/abt_dintruff_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol1.html";
+"~^/doc/tolerability/tolerability/abt_dintruff_tol2.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_dintruff_tol2.html";
+"~^/doc/tolerability/tolerability/abt_lichter_tol1.html$" "/doc/biology/2000-iapac-norvir/tolerability/abt_lichter_tol1.html";
+"~^/doc/tolerability/tolerability/butcher.html$" "/doc/biology/2000-iapac-norvir/tolerability/butcher.html";
+"~^/doc/tolerability/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/cohen.html$" "/doc/biology/2000-iapac-norvir/tolerability/cohen.html";
+"~^/doc/tolerability/tolerability/dejar_alc.html$" "/doc/biology/2000-iapac-norvir/tolerability/dejar_alc.html";
+"~^/doc/tolerability/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/tolerability/henry.html$" "/doc/biology/2000-iapac-norvir/tolerability/henry.html";
+"~^/doc/tolerability/tolerability/hirschhorntips.html$" "/doc/biology/2000-iapac-norvir/tolerability/hirschhorntips.html";
+"~^/doc/tolerability/tolerability/royaltips.html$" "/doc/biology/2000-iapac-norvir/tolerability/royaltips.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/urgnorvir.html$" "/doc/biology/2000-iapac-norvir/urgnorvir.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/urgnorvirnr.html$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
+"~^/doc/biology/2000-iapac-norvir/tolerability/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/tolerability/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/cat/catnip/%C2%BF$" "/doc/cat/catnip/index";
+"~^/doc/cat/valerian$" "/doc/cat/psychology/drug/valerian/index";
+"~^/doc/cs/2005-09-30--smith-whyihateframeworks.html$" "/doc/cs/2005-09-30-smith-whyihateframeworks.html";
+"~^/doc/sr/2019-04--22-deepdotweb-dnmlist.html$" "/doc/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/newsletter/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg$" "/doc/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail-red.jpg";
+"~^/helvetica$" "https://en.wikipedia.org/wiki/Helvetica";
+"~^/doc/history/Jy.*$" "/doc/history/index";
+"~^/doc/lmfi2.*$" "/doc/index";
+"~^/newsletter.xml$" "/doc/newsletter/index";
+"~^/doc/personal/epq_process.html$" "/doc/personal/2011-gwern-yourmorals.org/epq_process.html";
+"~^/doc/psychology/2019-01-842$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/psychology/p$" "/doc/psychology/index";
+"~^/doc/radiance/2002-scholz-radiance/$" "/doc/radiance/2002-scholz-radiance";
+"~^/GPT-3%C2%A0$" "/gpt-3";
+"~^/%E2%AF%B2$" "/index";
+"~^/%E2%AF%A6$" "/index";
+"~^/%E2%AF%9A$" "/index";
+"~^/%E2%AF%99$" "/index";
+"~^/newsletter/2020/05/rss$" "/newsletter/2020/05";
+"~^/newsletter/2020/05/feed$" "/newsletter/2020/05";
+"~^/newsletters/2024/12$" "/newsletter/2024/12";
+"~^/static/build/linkbacklink.hs$" "/static/build/LinkBacklink.hs";
+"~^/static/font/dropcap/Yinit-V.ttf$" "/static/font/dropcap/yinit/Yinit-V.ttf";
+"~^/static/font/dropcap/Yinit-Z.ttf$" "/static/font/dropcap/yinit/Yinit-Z.ttf";
+"~^/static/img/ornament/swissspiralroll.svg$" "/static/img/ornament/halloween/swissspiralroll.svg";
+"~^/static/img/ornament/asterism-triplewhitestar.svg$" "/static/img/ornament/inlined/asterism-triplewhitestar.svg";
+"~^/static/img/ornament/japanesecrest-tsukinihoshi-dottedmoon.svg$" "/static/img/ornament/inlined/japanesecrest-tsukinihoshi-dottedmoon.svg";
+"~^/static/img/ornament/sun-verginasun-black.svg$" "/static/img/ornament/inlined/sun-verginasun-black.svg";
+"~^/static/img/ornament/three-wavy-lines-ornament-left.svg$" "/static/img/ornament/inlined/three-wavy-lines-ornament-left.svg";
+"~^/static/img/ornament/three-wavy-lines-ornament-right.svg$" "/static/img/ornament/inlined/three-wavy-lines-ornament-right.svg";
+"~^/doc/anime/eva/1996-newtype-anno-interview%E0.*$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/Variables\?.*$" "/variables";
+"~^/Nicotine-Relevant.*$" "/nicotine";
+"~^/doc/statistics/2011-odgaard-jensen\.pdf.*$" "/doc/statistics/causality/2011-odgaardjensen.pdf";
+"~^/doc/psychology/willpower/2018-watts$" "/doc/psychology/willpower/2018-watts.pdf";
+"~^/doc/cat/catnip/survey/2017-08-01-%C3%B0.*$" "/doc/cat/psychology/drug/catnip/survey/2017-08-01-gs-reversed.csv";
+"~^/doc/biology/2000-iapac-norvir/southafricastmt.html$" "/doc/biology/2000-iapac-norvir/";
+"~^/doc/ai/poetry/2019-03-06-gpt2-poetry-1000I6e.*$" "/doc/ai/poetry/2019-03-06-gpt2-poetry-1000samples.txt";
+"~^/Danbooru2021,.*$" "/danbooru2021";
+"~^/doc/psychology/writing/1990-0$" "&/docs/psychology/writing/index";
+"~^/AB$" "/ab-testing";
+"~^/Black-market-arrest$" "/dnm-arrest";
+"~^/doc/2009-alloway\.pdf.*$" "/doc/dual-n-back/2009-alloway.pdf";
+"~^/doc/2010-borella\.pdf.*$" "/doc/dual-n-back/2010-borella.pdf";
+"~^/doc/2011-ziobrowski\.pdf.*$" "/doc/economics/2011-ziobrowski.pdf";
+"~^/doc/h$" "/doc/history/index";
+"~^/doc/8.*$" "/doc/index";
+"~^/doc/2004-crasson\.pdf.*$" "/doc/melatonin/2004-crasson.pdf";
+"~^/doc/psychology/%C2%BF.*$" "/doc/psychology/index";
+"~^/doc/dnb/2003-pool\.pdf.*$" "/doc/psychology/music/distraction/2003-pool.pdf";
+"~^/doc/psychology/writing/2018-10$" "/doc/psychology/writing/2018-10-27-googlesurveys-morningwriting.csv";
+"~^/doc/2013-google-index.csv$" "/doc/statistics/2013-google-index.csv";
+"~^/doc/technology/2014-%EF%BF%BD$" "/doc/technology/2014-rogers-adolphinstalethestoryofgamecube.html";
+"~^/TANKS$" "/tanks";
+"~^/fiction/fiction/genshiken$" "/fiction/genshiken";
+"~^/Girl$" "/girl-scouts";
+"~^/dog$" "/doc/doc/index";
+"~^/fashion$" "/note/fashion";
+"~^/alerts$" "/google-alerts";
+"~^/Resilient$" "/resilient-haskell-software";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25794,6 +25934,11 @@
 "~^/\.fj$" "/404";
 "~^/\.et$" "/404";
 "~^/\.cg$" "/404";
+"~^/free-webinar.*$" "/404";
+"~^/\.am.*$" "/404";
+"~^/adwords.*$" "/404";
+"~^/adv\.js.*$" "/404";
+"~^/acq.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
