--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11854,3 +11854,4 @@ default "";
 "~^/doc/psychedelic/2021-brett.pdf.*$" "/doc/psychedelic/ketamine/2021-brett.pdf";
 "~^/doc/psychedelic/2021-xiong.pdf.*$" "/doc/psychedelic/ketamine/2021-xiong.pdf";
 "~^/doc/psychedelic/2023-anand.pdf.*$" "/doc/psychedelic/ketamine/2023-anand.pdf";
+"~^/doc/psychology/personality/conscientiousness/2008-nadarajah.pdf.*$" "/doc/statistics/order/2008-nadarajah.pdf";
