--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11855,3 +11855,5 @@ default "";
 "~^/doc/psychedelic/2021-xiong.pdf.*$" "/doc/psychedelic/ketamine/2021-xiong.pdf";
 "~^/doc/psychedelic/2023-anand.pdf.*$" "/doc/psychedelic/ketamine/2023-anand.pdf";
 "~^/doc/psychology/personality/conscientiousness/2008-nadarajah.pdf.*$" "/doc/statistics/order/2008-nadarajah.pdf";
+"~^/doc/ai/nn/fully-connected/2025-policzak-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.png.*$" "/doc/ai/nn/fully-connected/2025-polaczek-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.png";
+"~^/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab-2.png.*$" "/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.png";
