--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11857,3 +11857,7 @@ default "";
 "~^/doc/psychology/personality/conscientiousness/2008-nadarajah.pdf.*$" "/doc/statistics/order/2008-nadarajah.pdf";
 "~^/doc/ai/nn/fully-connected/2025-policzak-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.png.*$" "/doc/ai/nn/fully-connected/2025-polaczek-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.png";
 "~^/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab-2.png.*$" "/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.png";
+"~^/doc/cat/biology/1997-hendriks-figure2-cathairgrowthperdayovertheyear.png.*$" "/doc/cat/biology/1997-hendriks-figure2-cathairgrowthperdayovertheyear.jpg";
+"~^/doc/ai/nn/fully-connected/2025-polaczek-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.png.*$" "/doc/ai/nn/fully-connected/2025-polaczek-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.jpg";
+"~^/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.png.*$" "/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.jpg";
+"~^/doc/music/2020-mehr.pdf.*$" "/doc/psychology/music/2020-mehr.pdf";
