--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -7803,7 +7803,7 @@
 "~^/Sodom-and-Gomorrah,-Texas$" "https://www.gutenberg.org/files/23161/23161-h/23161-h.htm";
 "~^/GPT-3Movies.*$" "/GPT-3-nonfiction#moviebook-plot-summaries";
 "~^/Cabal.*$" "https://www.haskell.org/cabal/";
-"~^/journals/ecam.*$" "https://www.hindawi.com/journals/ecam/";
+"~^/journals/ecam.*$" "https://onlinelibrary.wiley.com/journal/4747";
 "~^/Harry-Potter-and-the-Methods-of-Rationality.*$" "https://www.hpmor.com/";
 "~^/Tragedy-of-Light.*$" "https://www.hpmor.com/chapter/24";
 "~^/doc/www/www.inkandswitch.com/favicon.ico.*$" "https://www.inkandswitch.com/favicon.ico";
@@ -19567,6 +19567,28 @@
 "~^/fashion$" "/note/fashion";
 "~^/alerts$" "/google-alerts";
 "~^/Resilient$" "/resilient-haskell-software";
+"~^/Dark_Empire.*$" "https://en.wikipedia.org/wiki/Dark_Empire";
+"~^/adsct.*$" "/ads";
+"~^/static/Jp.*$" "/static/index";
+"~^/doc/economics/2019-paul.pdf,.*$" "/doc/economics/2019-paul.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-dark-2.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-17-gwern-midjourneyv5-cats-g-dark-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-2.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-17-gwern-midjourneyv5-cats-g-light-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-19-gwern-midjournevy5-cats-q-light-2.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-19-gwern-midjournevy5-cats-q-light-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-q-dark-4.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-cats-q-dark-4.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-13.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-13.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-c-light-5.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-23-gwern-midjourneyv5-ninit-c-light-5.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-4x4.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-4x4.jpg";
+"~^/doc/ai/nn/transformer/gpt/2021-nadeem-figure1-gpt2samplingqualityvsdiversity.png$" "/doc/ai/nn/transformer/gpt/2/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png";
+"~^/doc/ai/2021-jouppi.pdg.*$" "/doc/ai/scaling/hardware/2021-jouppi.pdf";
+"~^/suzane$" "/suzanne-delage";
+"~^/\;domain.*2$" "/404";
+"~^/Sidnotes.*$" "/sidenotes";
+"~^/vyvanse$" "https://en.wikipedia.org/wiki/Lisdexamfetamine";
+"~^/https/www.edge.org/conversation/-brains-plus-brawn$" "https://www.edge.org/conversation/daniel_lieberman-brains-plus-brawn";
+"~^/fiction/f2a21a1f86bcdab62b0\.pdf.*$" "/doc/www/arxiv.org/02a5edd3de87c708f5e99f2a21a1f86bcdab62b0.pdf";
+"~^/fiction/2f63ff9\.pdf.*$" "/doc/www/arxiv.org/5955fac99eae201f84f6432978be2fb402f63ff9.pdf";
+"~^/doc/reinforcement-learning/preference-learning/2021-spape.pdf\).*$" "/doc/reinforcement-learning/preference-learning/2021-spape.pdf";
+"~^/doc/technology/2013-0$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25939,6 +25961,17 @@
 "~^/adwords.*$" "/404";
 "~^/adv\.js.*$" "/404";
 "~^/acq.*$" "/404";
+"~^/verify-installation.*$" "/404";
+"~^/validate.*$" "/404";
+"~^/trackers/.*$" "/404";
+"~^/tcvs/.*$" "/404";
+"~^/steps.*$" "/404";
+"~^/static/build/psychedelicranger.*$" "/404";
+"~^/static/app/.*$" "/404";
+"~^/set-attributes.*$" "/404";
+"~^/sessions.*$" "/404";
+"~^/response.*$" "/404";
+"~^/consent.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
