--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11861,3 +11861,4 @@ default "";
 "~^/doc/ai/nn/fully-connected/2025-polaczek-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.png.*$" "/doc/ai/nn/fully-connected/2025-polaczek-figure3-neuralsvgarchitectureofmlppredictingoutputspershape.jpg";
 "~^/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.png.*$" "/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.jpg";
 "~^/doc/music/2020-mehr.pdf.*$" "/doc/psychology/music/2020-mehr.pdf";
+"~^/doc/reinforcement-learning/model/2010-silver-figure1-illustrationofpomcpmctssearchoverapomdp.png.*$" "/doc/reinforcement-learning/model/2010-silver-figure1-illustrationofpomcpmctssearchoverapomdp.jpg";
