--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -46,6 +46,7 @@
 "~^/about@anonymous-feedback.*$" "/about#anonymous-feedback";
 "~^/episteme\/$" "/about#belief-tags";
 "~^/about@colophon.*$" "/about#colophon";
+"~^/[Cc]olophon.*$" "/about#colophon";
 "~^/About%20-%20confidence-tags$" "/about#confidence-tags";
 "~^/about@development.*$" "/about#development";
 "~^/about@feedback-causes.*$" "/about#feedback-causes";
