--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11862,3 +11862,5 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.png.*$" "/doc/ai/nn/transformer/gpt/codex/2025-01-08-gwern-facebookvssp5001yearreturn-chatgpto1provsportolioslab.jpg";
 "~^/doc/music/2020-mehr.pdf.*$" "/doc/psychology/music/2020-mehr.pdf";
 "~^/doc/reinforcement-learning/model/2010-silver-figure1-illustrationofpomcpmctssearchoverapomdp.png.*$" "/doc/reinforcement-learning/model/2010-silver-figure1-illustrationofpomcpmctssearchoverapomdp.jpg";
+"~^/doc/fiction/science-fiction/1931-tolkien.pdf.*$" "/doc/fiction/fantasy/1931-tolkien.pdf";
+"~^/doc/fiction/science-fiction/2015-mirante-thesubcreationtheoryofjrrtolkien.html.*$" "/doc/fiction/fantasy/2015-mirante-thesubcreationtheoryofjrrtolkien.html";
