--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11864,3 +11864,4 @@ default "";
 "~^/doc/reinforcement-learning/model/2010-silver-figure1-illustrationofpomcpmctssearchoverapomdp.png.*$" "/doc/reinforcement-learning/model/2010-silver-figure1-illustrationofpomcpmctssearchoverapomdp.jpg";
 "~^/doc/fiction/science-fiction/1931-tolkien.pdf.*$" "/doc/fiction/fantasy/1931-tolkien.pdf";
 "~^/doc/fiction/science-fiction/2015-mirante-thesubcreationtheoryofjrrtolkien.html.*$" "/doc/fiction/fantasy/2015-mirante-thesubcreationtheoryofjrrtolkien.html";
+"~^/doc/longevity/johan-bjorksten/1986-bjorksten.pdf.*$" "/doc/longevity/johan-bjorksten/1986-klonowska.pdf";
