--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19590,6 +19590,8 @@
 "~^/fiction/2f63ff9\.pdf.*$" "/doc/www/arxiv.org/5955fac99eae201f84f6432978be2fb402f63ff9.pdf";
 "~^/doc/reinforcement-learning/preference-learning/2021-spape.pdf\).*$" "/doc/reinforcement-learning/preference-learning/2021-spape.pdf";
 "~^/doc/technology/2013-0$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
+"~^/doc/design/typography/2011-shufang\.pdf.*$" "/doc/design/typography/paper-marbling/2012-lu.pdf";
+"~^/doc/cs/hardware/2021-sia\.pdf.*$" "/doc/cs/hardware/2024-sia.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25973,6 +25975,12 @@
 "~^/sessions.*$" "/404";
 "~^/response.*$" "/404";
 "~^/consent.*$" "/404";
+"~^/yazcorp.*$" "/404";
+"~^/.*wern.net.zip.*$" "/404";
+"~^/.*wern.net.rar.*$" "/404";
+"~^/orbis/.*$" "/404";
+"~^/open/.*$" "/404";
+"~^/listen.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
