--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19592,6 +19592,12 @@
 "~^/doc/technology/2013-0$" "/doc/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
 "~^/doc/design/typography/2011-shufang\.pdf.*$" "/doc/design/typography/paper-marbling/2012-lu.pdf";
 "~^/doc/cs/hardware/2021-sia\.pdf.*$" "/doc/cs/hardware/2024-sia.pdf";
+"~^/Seeing-Through-the-Fog.*$" "https://www.amazon.com/Seeing-Through-Fog-World-Falls/dp/B08XL6H4X5";
+"~^/complexity-vs-ai\\?.*$" "/complexity";
+"~^/DNB-FAQY.*$" "/dnb-faq";
+"~^/\&Twice.*$" "/index";
+"~^/index\&.*$" "/index";
+"~^/[0-9]+$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
