--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19598,6 +19598,7 @@
 "~^/\&Twice.*$" "/index";
 "~^/index\&.*$" "/index";
 "~^/[0-9]+$" "/index";
+"~^/Creative-Daijisen.*$" "https://en.wikipedia.org/wiki/Daijisen";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25987,6 +25988,13 @@
 "~^/orbis/.*$" "/404";
 "~^/open/.*$" "/404";
 "~^/listen.*$" "/404";
+"~^/npm-pwg/.*$" "/404";
+"~^/%F0%90%8E%9A.*$" "/404";
+"~^/%E5%B9%B3%E5%87%A1%E7%A4%BE.*$" "/404";
+"~^/%CE%92.*$" "/404";
+"~^/%C5%81.*$" "/404";
+"~^/%C4%86e.*$" "/404";
+"~^/%C2%B7.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
