--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11865,3 +11865,5 @@ default "";
 "~^/doc/fiction/science-fiction/1931-tolkien.pdf.*$" "/doc/fiction/fantasy/1931-tolkien.pdf";
 "~^/doc/fiction/science-fiction/2015-mirante-thesubcreationtheoryofjrrtolkien.html.*$" "/doc/fiction/fantasy/2015-mirante-thesubcreationtheoryofjrrtolkien.html";
 "~^/doc/longevity/johan-bjorksten/1986-bjorksten.pdf.*$" "/doc/longevity/johan-bjorksten/1986-klonowska.pdf";
+"~^/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit-512px.png.*$" "/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit-512px.jpg";
+"~^/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.png.*$" "/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.jpg";
