--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19599,6 +19599,26 @@
 "~^/index\&.*$" "/index";
 "~^/[0-9]+$" "/index";
 "~^/Creative-Daijisen.*$" "https://en.wikipedia.org/wiki/Daijisen";
+"~^/doc/psychology/spaced-repetition/1981-duchastel/$" "/doc/psychology/spaced-repetition/1981-duchastel";
+"~^/doc/longevity/glp/liraglutide/2015-NEJM.*$" "/doc/longevity/glp/liraglutide/index";
+"~^/doc/iq/1984-sternberg.pdfS.*$" "/doc/iq/1984-sternberg.pdf";
+"~^/doc/design/typography/1980-k$" "/doc/design/typography/1980-knuth.pdf";
+"~^/doc/darknet-market/2015-01-15-outlawmarket-/$" "/doc/darknet-market/2015-01-15-outlawmarket-index.html";
+"~^/doc/culture/2007-wolfe/$" "/doc/culture/2007-wolfe";
+"~^/doc/culture/1963-asimov/$" "/doc/culture/1963-asimov";
+"~^/doc/bitcoin/2014-mccaleb/$" "/doc/bitcoin/2014-mccaleb";
+"~^/changelog/atom$" "/changelog";
+"~^/doc/culture/1983-wolfe-thecitadeloftheautarch-thejustman/$" "/doc/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
+"~^/doc/2019-04-22-deepdotweb-dnmlist.htl$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/psychology/2019-01-1$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/psyc$" "/doc/psychology/index";
+"~^/doc/psychology/okcupid/howyourraceaf$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/sociology/1974-m$" "/doc/sociology/1972-may.pdf";
+"~^/doc/2003-murr$" "/doc/sociology/2003-murray-humanaccomplishment.pdf";
+"~^/doc/statistics/bayes/hope-function/1994-falk/$" "/doc/statistics/bayes/hope-function/1994-falk";
+"~^/about.json$" "/me";
+"~^/plastinationfa.*$" "/plastination";
+"~^/Dsnbooru2019.*$" "/danbooru2019";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25995,6 +26015,24 @@
 "~^/%C5%81.*$" "/404";
 "~^/%C4%86e.*$" "/404";
 "~^/%C2%B7.*$" "/404";
+"~^/dbtoolkit.*$" "/404";
+"~^/xpl/.*$" "/404";
+"~^/Xplorehelp/.*$" "/404";
+"~^/Widget/.*$" "/404";
+"~^/virtual-journals/.*$" "/404";
+"~^/ui-forms-embed.*$" "/404";
+"~^/usage/.*$" "/404";
+"~^/registry/.*$" "/404";
+"~^/__registry.*$" "/404";
+"~^/org/.*$" "/404";
+"~^/:orgName/.*$" "/404";
+"~^/objs/.*$" "/404";
+"~^/obj/.*$" "/404";
+"~^/my-favorite.*$" "/404";
+"~^/mods/.*$" "/404";
+"~^/kindeditor.*$" "/404";
+"~^/:entityName.*$" "/404";
+"~^/alerts/.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
