--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19619,6 +19619,44 @@
 "~^/about.json$" "/me";
 "~^/plastinationfa.*$" "/plastination";
 "~^/Dsnbooru2019.*$" "/danbooru2019";
+"~^/doc/iq/2004-deary.pdf&.*$" "/doc/iq/2004-deary.pdf";
+"~^/doc/rotten.com/library/bio/sports/jesse-ventura/index$" "/doc/rotten.com/library/bio/sports/jesse-ventura/index.html";
+"~^/doc/politics/2007-thiel.pdf&.*$" "/doc/politics/2007-thiel.pdf";
+"~^/doc/.*index/changelog$" "/changelog";
+"~^/doc/.*/about$" "/about";
+"~^/doc/ai/2020-openai-gpt3-economy\.pdf.*$" "/doc/ai/nn/transformer/gpt/3/index";
+"~^/complement%C2%A0.*$" "/complement";
+"~^/ab-testing\?utm.*$" "/ab-testing";
+"~^/Sort1008The.*$" "/sort";
+"~^/doc/statistics/1934-wright$" "/doc/statistics/1934-wright.pdf";
+"~^/doc/rotten.com/library/sex/Anal_Sex/index$" "/doc/rotten.com/library/sex/anal-sex/index.html";
+"~^/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry%3Dpyramid1.jpg$" "/doc/rotten.com/library/occult/sacred-geometry/sacredgeometry-pyramid1.jpg";
+"~^/doc/rotten.com/library/incest/$" "/doc/rotten.com/library/sex/incest/index.html";
+"~^/doc/psychology/music/distraction/2012-perham.go.*$" "/doc/psychology/music/distraction/2012-perham.pdf";
+"~^/doc/psychology/2019-hsu.pdfcan.*$" "/doc/psychology/2019-hsu.pdf";
+"~^/doc/iq/high/anne-roe/1953-roe-makingscientist.pdft.*$" "/doc/iq/high/anne-roe/1953-roe-makingscientist.pdf";
+"~^/doc/genetics/heritable/2015-po$" "/doc/genetics/heritable/2015-polderman.pdf";
+"~^/doc/economics/1688-delavega-confusionofconfusions$" "/doc/economics/1688-delavega-confusionofconfusions.pdf";
+"~^/doc/ai/nn/fully-connected/J.*$" "/doc/ai/nn/fully-connected/";
+"~^/doc/ai/internal-monologue/index$" "/doc/ai/nn/transformer/gpt/inner-monologue/index";
+"~^/DNB-FAQP.*$" "/dnb-faq";
+"~^/commoditize.*$" "/complement";
+"~^/Tobacco$" "https://en.wikipedia.org/wiki/Tobacco";
+"~^/DNMarchives.*$" "/dnm-archives";
+"~^/doc/darknet-market/agora/2014-12$" "/doc/darknet-market/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/doc/genetics/selection/2013-anonymus-strategicconsequencesofchineseracism\.pdf.*$" "/doc/genetics/selection/artificial/2013-anonymous-strategicconsequencesofchineseracism.pdf";
+"~^/doc/m$" "/doc/index";
+"~^/doc/5.*$" "/doc/index";
+"~^/doc/japan/2004-garofalo-thehaikuandpoemsofikkyu.htm$" "/doc/japan/poetry/2004-garofalo-thehaikuandpoemsofikkyu.html";
+"~^/doc/psychology/okcupid/howyour$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/psychology/okcupid/raceandattraction$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/GPT-2-%C3%A9.*$" "/gpt-3";
+"~^/newsletter/2025$" "/newsletter/2025/index";
+"~^/doc/newsletter/2021/index$" "/newsletter/2021/index";
+"~^/red1.*$" "/red";
+"~^/hakyll$" "/static/build/hakyll.hs";
+"~^/fav-icon.ico$" "/static/img/favicon.ico";
+"~^/doc/logo.ico$" "/static/img/favicon.ico";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
