nginx: fix subtle location precedence issue which meant SSI wasn't being disabled for the WWW archives after all (because that block was being overriden by the robots-header block, as explained by o1-pro)

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -51,11 +51,13 @@ server {
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
         # Prevent crawlers from indexing specific directories to reduce DMCA risk
         # and repeat robots.txt's major rules, because Google Search appears to ignore it:
-        location ~ ^/(doc/www/|doc/link-bibliography/|metadata/|404) {
+        location ~ ^/(doc/link-bibliography/|metadata/|404) {
                  add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
 
         # Specific configuration for /doc/www/: WWW snapshots may accidentally match SSI includes, breaking them badly, so disable SSI just for those:
-        location /doc/www/ { ssi off; }
+        location /doc/www/ { ssi off;
+        # duplicate the no-scraping header because otherwise the previous regexp match would override this and you'd get SSI xor headers on /doc/www/*:
+        add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
 
         ## support basic MIME types
         include  /etc/nginx/mime.types;
@@ -533,6 +535,16 @@ server {
         rewrite ^/(?<original>.*)undefined$ /$original permanent;
 
         # deal en masse with spam hits from local Reddit archives
+        rewrite ^/doc/politics/(?<original>.*)$ https://old.reddit.com/r/politics/$original permanent;
+        rewrite ^/CasadastraphobiaENG/(?<original>.*)$ https://old.reddit.com/r/CasadastraphobiaENG/$original permanent;
+        rewrite ^/fusion/(?<original>.*)$ https://old.reddit.com/r/fusion/$original permanent;
+        rewrite ^/gamedev/(?<original>.*)$ https://old.reddit.com/r/gamedev/$original permanent;
+        rewrite ^/intradeForum/(?<original>.*)$ https://old.reddit.com/r/intradeForum/$original permanent;
+        rewrite ^/keto/(?<original>.*)$ https://old.reddit.com/r/keto/$original permanent;
+        rewrite ^/DimensionJumping/(?<original>.*)$ https://old.reddit.com/r/DimensionJumping/$original permanent;
+        rewrite ^/AstralProjection/(?<original>.*)$ https://old.reddit.com/r/AstralProjection/$original permanent;
+        rewrite ^/shiftingrealities/(?<original>.*)$ https://old.reddit.com/r/shiftingrealities/$original permanent;
+        rewrite ^/Phobia/(?<original>.*)$ https://old.reddit.com/r/Phobia/$original permanent;
         rewrite ^/DotA2/(?<original>.*)$ https://old.reddit.com/r/DotA2/$original permanent;
         rewrite ^/place/(?<original>.*)$ https://old.reddit.com/r/place/$original permanent;
         rewrite ^/AIDungeon/(?<original>.*)$ https://old.reddit.com/r/AIDungeon/$original permanent;
