--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16466,7 +16466,7 @@
 "~^/doc/touhou/2013-06-08-acircle-tohoarrangeb.xz$" "/doc/touhou/2013-06-08-acircle-tohoarrange.csv";
 "~^/doc/zeo/2012-0$" "/doc/zeo/index";
 "~^/Drug-heurist$" "/drug-heuristic";
-"~^/Embryo-editingAn$" "/embryo-editing";
+"~^/Embryo-editing.*$" "/embryo-editing";
 "~^/Embryo_editing$" "/embryo-editing";
 "~^/eveything$" "/everything";
 "~^/fiction/%C3%B0$" "/fiction/index";
@@ -19657,6 +19657,47 @@
 "~^/hakyll$" "/static/build/hakyll.hs";
 "~^/fav-icon.ico$" "/static/img/favicon.ico";
 "~^/doc/logo.ico$" "/static/img/favicon.ico";
+"~^/doc/iq/ses/2009-richwine$" "/doc/iq/ses/2009-richwine.pdf";
+"~^/WinoGrande$" "https://arxiv.org/abs/1907.10641#allen";
+"~^/static/media/car$" "/404";
+"~^/sd/.*$" "/404";
+"~^/rotten.com$" "/doc/rotten.com/library/index.html";
+"~^/LinkTag2.js$" "/static/build/LinkIcon.hs";
+"~^/improvement%E2%96%B3%E2%98%86.*$" "/improvement";
+"~^/doc/rotten.com/library/history/wtc/index.html\..*$" "/doc/rotten.com/library/history/wtc/index.html";
+"~^/doc/psychology/personality/conscientiousness/PDFs/AMA\.pdf.*$" "/doc/psychology/personality/conscientiousness/index";
+"~^/doc/psychology/linguistics/2024-fedorenko.pdf%E2%80%9C.*$" "/doc/psychology/linguistics/2024-fedorenko.pdf";
+"~^/doc/math/1973-jech-theaxiomofchoice.pdf[0-9].*" "/doc/math/1973-jech-theaxiomofchoice.pdf";
+"~^/doc/iq/ses/2007-zagorsky$" "/doc/iq/ses/2007-zagorsky.pdf";
+"~^/doc/iq/ses/2002-hauser.pdfI.*$" "/doc/iq/ses/2002-hauser.pdf";
+"~^/doc/iq/high/smpy/1957-super-scientificcareersandvocationald$" "/doc/iq/high/smpy/1957-super-scientificcareersandvocationaldevelopmenttheory.pdf";
+"~^/doc/iq/2001-sternberg.pdf.11$" "/doc/iq/2001-sternberg.pdf";
+"~^/doc/cs/hardware/2020-troise.pdf%C3%83%C2%AF%C3%82%C2%BB%C3%82%C2%BF.*$" "/doc/cs/hardware/2020-troise.pdf";
+"~^/doc/cs/hardware/2020-troise$" "/doc/cs/hardware/2020-troise.pdf";
+"~^/ArchivingURLs$" "/archiving-urls";
+"~^/doc/2013-09-11-xkcd-1263-reassuring.png$" "/doc/ai/2013-09-11-xkcd-1263-reassuring.jpg";
+"~^/doc/Carnip/2002-cameronbeaumont\.pdf.*$" "/doc/cat/psychology/2002-cameronbeaumont.pdf";
+"~^/doc/fiction/science-fiction/frank-herbert/1982-omni-july\.pdf.*$" "/doc/fiction/science-fiction/frank-herbert/1980-omni-july.pdf";
+"~^/doc/longevi$" "/doc/longevity/index";
+"~^/doc/1998-levin\.pdf.*$" "/doc/nicotine/1998-levin.pdf";
+"~^/doc/2016-12-05-wifi-benchmarking.csv$" "/doc/personal/2016-12-05-wifi-benchmarking.csv";
+"~^/doc/psychology/psychology/2006-porter-humanscenttracking-41593_2007_bfnn1819_moesm2_esm.mp4$" "/doc/psychology/2006-porter-humanscenttracking-41593_2007_bfnn1819_moesm2_esm.mp4";
+"~^/doc/psychology/2017-kirschner$" "/doc/psychology/2017-kirschne.pdf";
+"~^/doc/psychology/writing/1990-%C3%B0$" "/doc/psychology/writing/index";
+"~^/doc/sociology/2014-459$" "/doc/sociology/index";
+"~^/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdfis$" "/doc/statistics/order/comparison/1978-elo-theratingofchessplayerspastandpresent.pdf";
+"~^/the-narrowing-circle.md$" "/narrowing-circle";
+"~^/prediction-markets.md$" "/prediction-market.md";
+"~^/Research-critic$" "/research-criticism";
+"~^/review/Movies$" "/review/movies";
+"~^/spaced-repetitionSome$" "/spaced-repetition";
+"~^/review/tea/static/img/logo/logo-favicon-appletouch-dark.png$" "/static/img/logo/logo-favicon-appletouch-dark.png";
+"~^/logo.png$" "/static/img/logo/logo.png";
+"~^/doc/iq/2016-okbay-2$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4883595/";
+"~^/doc/cs/algorithm/ai/nn/transformer/gpt/non-fiction/index$" "/doc/ai/nn/transformer/gpt/fiction/index";
+"~^/doc/statistics/bayes/%C3%82%C2%BF$" "/doc/statistics/bayes/index";
+"~^/sicp/chapter-1.2$" "/sicp/1-2";
+"~^/turing-completeand$" "/turing-complete";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -26071,6 +26112,9 @@
 "~^/kindeditor.*$" "/404";
 "~^/:entityName.*$" "/404";
 "~^/alerts/.*$" "/404";
+"~^/doc/www/misc/2024-04-22.*$" "/404";
+"~^/zru.*$" "/index";
+"~^/static/dist/.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
