--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11867,3 +11867,5 @@ default "";
 "~^/doc/longevity/johan-bjorksten/1986-bjorksten.pdf.*$" "/doc/longevity/johan-bjorksten/1986-klonowska.pdf";
 "~^/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit-512px.png.*$" "/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit-512px.jpg";
 "~^/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.png.*$" "/doc/ai/nn/diffusion/2025-01-22-gwern-imagen3-2waxcandleslitandunlit.jpg";
+"~^/doc/psychology/2006-porter-humanscenttracking-41593_2007_bfnn1819_moesm2_esm.mp4.*$" "/doc/psychology/smell/human/2006-porter-humanscenttracking-41593_2007_bfnn1819_moesm2_esm.mp4";
+"~^/doc/biology/2025-marmagkiolis-figure1-yellowskindepositsfromxanthelasmafromcarnivorediet.png.*$" "/doc/biology/2025-marmagkiolis-figure1-yellowskindepositsfromxanthelasmafromcarnivorediet.jpg";
